# sp1-gpu

./: .clang-format  .gitignore  Cargo.toml  Dockerfile.server  Dockerfile.toolchain  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  out.txt
.github/: runs-on.yml
.github/actions/runs-on/: action.yml
.github/actions/self-hosted/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: docker.yml  pr.yml  pr_lint.yml
air/: Cargo.toml
air-v2/: Cargo.toml
air-v2/src/: instruction.rs  lib.rs  optimizer.rs  symbolic_expr_ef.rs  symbolic_expr_f.rs  symbolic_var_ef.rs  symbolic_var_f.rs
air/src/: compiler.rs  lib.rs  operation.rs  optimizer.rs  symbolic_expr_ef.rs  symbolic_expr_f.rs  symbolic_folder_expr.rs  symbolic_folder_var.rs  symbolic_var_ef.rs  symbolic_var_f.rs
babybear/: Cargo.toml  build.rs
babybear/cuda/: add.cu  bb31_t.cuh  exception.cuh  kernels.cuh  poseidon2.cuh
babybear/cuda/merkle/: merkle.cuh
babybear/cuda/poseidon2/: kernels.cuh  poseidon2.cuh
babybear/src/: lib.rs
binius-gpu-main/: LICENSE.txt  README.md
binius-gpu-main/src/ulvt/finite_fields/: baby_bear.cuh  binary_tower.cuh  binary_tower_simd.cuh  risc0_baby_bear.h
binius-gpu-main/src/ulvt/ntt/: additive_ntt.cuh  gpuntt.cuh  nttconf.cu  nttconf.cuh
bloc/: Cargo.toml
bloc/src/: alloc.rs  bump.rs  herd.rs  lib.rs  raw_buffer.rs
bloc/src/bump/: mod.rs
core/: Cargo.toml  build.rs
core/benches/: trace.rs
core/benches/trace/: add_sub.rs  fibonacci.rs  main.rs
core/bindings/: api.cu
core/cpp/: extern.cu
core/cuda/: api.cu  error.cuh  exception.cuh  mem.cu  mem.cuh
core/include/: moongate_core_sys.cuh  moongate_cuda.cuh
core/src/: buffer.rs  device.rs  error.rs  ffi.rs  lib.rs  mem.rs  ptr.rs  slice.rs
core/src/baby_bear/: ffi.rs  mod.rs  scan.rs  sum.rs
core/src/challenger/: duplex_challenger.rs  grind_on_device.rs  grinding_challenger.rs  mod.rs
core/src/cuda_runtime/: event.rs  ffi.rs  mod.rs  pinned.rs  scope.rs  spawn.rs  stream.rs  task.rs
core/src/device/: allocator.rs  buffer.rs  error.rs  ffi.rs  memory.rs  mod.rs  ops.rs  scan.rs  slice.rs  sync.rs
core/src/device/pointer/: mod.rs  pinned.rs  stream.rs  sync.rs
core/src/dft/: ffi.rs  mod.rs
core/src/fri/: commit.rs  mod.rs  open.rs  two_adic_pcs.rs
core/src/matrix/: col_major.rs  mod.rs  pinned.rs  row_major.rs  view.rs
core/src/merkle_tree/: hasher.rs  mmcs.rs  mod.rs
core/src/permutation/: mod.rs
core/src/poseidon2/: baby_bear.rs  baby_bear_gpu.rs  bn254.rs  bn254_gpu.rs  constants.rs  hashers.rs  mod.rs
core/src/runtime/: ffi.rs  mod.rs  scope.rs  stream.rs
core/src/stark/: air.rs  error.rs  ffi.rs  mod.rs  permutation.rs  prover.rs  quotient.rs  quotient_host.rs  sync.rs  trace.rs  utils.rs
core/src/time/: layer.rs  mod.rs
core/src/trace/: mod.rs
core/src/tracegen/: core.rs  ffi.rs  mod.rs  recursion.rs  recursion_preprocessed.rs
core/src/univariate/: air_point.rs  ffi.rs  mod.rs
core/src/utils/: mod.rs  nvtx.rs  stats.rs  tracer.rs
core/tests/: extension.rs  scan.rs
cuda/air/: fibonacci.cuh  folder.cuh
cuda/air/codegen/: addsub.cuh  bitwise.cuh  bls12381addassign.cuh  bls12381decompress.cuh  bn254addassign.cuh  bn254doubleassign.cuh  byte.cuh  codegen.cuh  cpu.cuh  divrem.cuh  edaddassign.cuh  eddecompress.cuh  keccakpermute.cuh  lt.cuh  memoryfinalize.cuh  memoryinit.cuh  memoryprogram.cuh  mul.cuh  program.cuh  secp256k1addassign.cuh  secp256k1decompress.cuh  secp256k1doubleassign.cuh  shacompress.cuh  shaextend.cuh  shiftleft.cuh  shiftright.cuh  uint256mulmod.cuh
cuda/challenger/: challenger.cuh
cuda/fields/: alt_bn128.hpp  bb31_curve_t.cuh  bb31_extension_t.cuh  bb31_t.cuh  bn254.cuh  bn254_t.cuh  mont_t.cuh  test_ariphmetic.cu
cuda/fields/mersenne31/: mer31_complex_t.cuh  mer31_extension_t.cuh  mer31_t.cuh  mers31_t.cuh
cuda/hashes/poseidon2/: bindings.cuh  kernels.cuh  poseidon2.cuh  poseidon2_bb31_16.cuh  poseidon2_bn254_16.cuh  poseidon2_bn254_3.cuh
cuda/hashes/poseidon2_bb31_16/: bindings.cuh  constants.cuh  kernels.cuh  poseidon2_bb31_16.cuh
cuda/matrix/: matrix.cuh  strided.cu  transpose.cuh  type.cuh
cuda/mmcs/: kernels.cuh  merkle.cuh  merkle_tree.cuh
cuda/ntt/: bindings.cuh  sppark.cuh
cuda/opening/: fri_batch.cuh  opening.cuh
cuda/quotient/: operation.cuh  quotient.cu  quotient.cuh  symbolic_folder_expr.cuh  symbolic_folder_var.cuh  utils.cuh
cuda/reduce/: air_point.cuh  reduce.cuh
cuda/scan/: kernel.cu  kernels.cu  scan.cuh
cuda/stark/: interaction.cuh  permutation.cu  stark.cuh
cuda/sum/: sum.cuh
cuda/tests/: extension.cuh  tests.cuh
cuda/trace/: core.cuh
cuda/tracegen/: core.cuh  global.cuh  recursion.cuh  recursion_preprocessed.cuh
cuda/transpose/: transpose.cuh
cuda/univariate/: eval.cuh  eval_air_point.cuh
cuda/utils/: cumulative_sum.cuh  exception.cuh  matrix.cuh  memory.cuh  runtime.cuh  transpose.cuh  vector.cuh
dft/: Cargo.toml
eval/: Cargo.toml
eval/src/: main.rs
fields_lib/: test_ariphmetic.cu
fields_lib/binius/: binius_t.cuh
fields_lib/mersenne31/: mer31_extension_t.cuh  mer31_t.cuh
fields_test/: bb31_extension_t.cuh  bb31_t.cuh  fields_test  fields_test.cu  m31.cuh  run.sh
fields_test/binary/: binary_tower.cuh
gas/: Cargo.toml
gas/src/: lib.rs  main.rs  record.rs  report.rs  shard.rs
perf/: Cargo.toml  error.sh  retry.sh  run_s3.sh
perf/programs/: fibonacci-small
perf/programs/keyspace-batcher/: riscv32im-succinct-zkvm-elf
perf/programs/keyspace-record/: riscv32im-succinct-zkvm-elf
perf/programs/tendermint-benchmark/: riscv32im-succinct-zkvm-elf
perf/src/: lib.rs  main.rs  programs.rs  report.rs  tracer.rs
prover/: Cargo.toml
prover/benches/: prove.rs
prover/src/: components.rs  gpu.rs  lib.rs  verify.rs
server/: Cargo.toml
server/src/: main.rs
sppark/ff/: baby_bear.hpp  bb31_t.cuh  bls12-377-fp2.hpp  bls12-381-fp2.hpp
sppark/ntt/: kernels.cu  ntt.cuh  parameters.cuh
sppark/ntt/kernels/: ct_mixed_radix_narrow.cu  gs_mixed_radix_narrow.cu
sppark/ntt/parameters/: baby_bear.h
sppark/util/: gpu_t.cuh
(+39 files in other folders)
