[workspace]
members = ["air", "core", "eval", "perf", "prover", "server"]

exclude = ["sppark/poc/ntt-cuda", "sppark/rust"]

resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]

# sp1
# sp1-core-executor = { git = "ssh://git@github.com/succinctlabs/sp1-wip.git", branch = "min/eclogup" }
# sp1-core-machine = { git = "ssh://git@github.com/succinctlabs/sp1-wip.git", branch = "min/eclogup" }
# sp1-prover = { git = "ssh://git@github.com/succinctlabs/sp1-wip.git", branch = "min/eclogup" }
# sp1-recursion-core = { git = "ssh://git@github.com/succinctlabs/sp1-wip.git", branch = "min/eclogup" }
# sp1-cuda = { git = "ssh://git@github.com/succinctlabs/sp1-wip.git", branch = "min/eclogup" }
# sp1-stark = { git = "ssh://git@github.com/succinctlabs/sp1-wip.git", branch = "min/eclogup" }
# sp1-eval = { git = "ssh://git@github.com/succinctlabs/sp1-wip.git", branch = "min/eclogup" }

# p3
# p3-air = "0.1.4-succinct"
# p3-field = "0.1.4-succinct"
# p3-commit = "0.1.4-succinct"
# p3-matrix = "0.1.4-succinct"
# p3-baby-bear = "0.1.4-succinct"
# p3-util = "0.1.4-succinct"
# p3-challenger = "0.1.4-succinct"
# p3-dft = "0.1.4-succinct"
# p3-fri = "0.1.4-succinct"
# p3-goldilocks = "0.1.4-succinct"
# p3-keccak = "0.1.4-succinct"
# p3-keccak-air = "0.1.4-succinct"
# p3-blake3 = "0.1.4-succinct"
# p3-mds = "0.1.4-succinct"
# p3-merkle-tree = "0.1.4-succinct"
# p3-poseidon2 = "0.1.4-succinct"
# p3-symmetric = "0.1.4-succinct"
# p3-uni-stark = "0.1.4-succinct"
# p3-maybe-rayon = "0.1.4-succinct"
# p3-bn254-fr = "0.1.4-succinct"
# p3-interpolation = "0.1.4-succinct"

# for local development

sp1-core-executor = { path = "../sp1-wip/crates/core/executor" }
sp1-core-machine = { path = "../sp1-wip/crates/core/machine" }
sp1-prover = { path = "../sp1-wip/crates/prover", features = ["native-gnark"] }
sp1-recursion-core = { path = "../sp1-wip/crates/recursion/core" }
sp1-cuda = { path = "../sp1-wip/crates/cuda" }
sp1-stark = { path = "../sp1-wip/crates/stark" }
sp1-eval = { path = "../sp1-wip/crates/eval" }

# p3-field = { path = "../Plonky3/field" }
# p3-air = { path = "../Plonky3/air" }
# p3-baby-bear = { path = "../Plonky3/baby-bear" }
# p3-bn254-fr = { path = "../Plonky3/bn254-fr" }
# p3-poseidon2 = { path = "../Plonky3/poseidon2" }
# p3-symmetric = { path = "../Plonky3/symmetric" }
# p3-dft = { path = "../Plonky3/dft" }
# p3-matrix = { path = "../Plonky3/matrix" }
# p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
# p3-commit = { path = "../Plonky3/commit" }
# p3-fri = { path = "../Plonky3/fri" }
# p3-challenger = { path = "../Plonky3/challenger" }
# p3-util = { path = "../Plonky3/util" }
# p3-interpolation = { path = "../Plonky3/interpolation" }
# p3-uni-stark =  { path = "../Plonky3/uni-stark" }

p3-interpolation = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-air = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-util = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-bn254-fr = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
