[workspace]
members = ["air", "core", "eval", "perf", "prover", "server"]

exclude = ["sppark/poc/ntt-cuda", "sppark/rust"]

resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]

# sp1
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "yuwen/debug" } 
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "yuwen/debug" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "yuwen/debug" }
sp1-recursion-core = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "yuwen/debug" }
sp1-cuda = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "yuwen/debug" }
sp1-stark = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "yuwen/debug" }
sp1-eval = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "yuwen/debug" }

# p3
p3-interpolation = "=0.2.0-succinct"
p3-air = "=0.2.0-succinct"
p3-field = "=0.2.0-succinct"
p3-commit = "=0.2.0-succinct"
p3-matrix = "=0.2.0-succinct"
p3-baby-bear = "=0.2.0-succinct"
p3-util = "=0.2.0-succinct"
p3-challenger = "=0.2.0-succinct"
p3-dft = "=0.2.0-succinct"
p3-fri = "=0.2.0-succinct"
p3-goldilocks = "=0.2.0-succinct"
p3-keccak = "=0.2.0-succinct"
p3-keccak-air = "=0.2.0-succinct"
p3-blake3 = "=0.2.0-succinct"
p3-mds = "=0.2.0-succinct"
p3-merkle-tree = "=0.2.0-succinct"
p3-poseidon2 = "=0.2.0-succinct"
p3-symmetric = "=0.2.0-succinct"
p3-uni-stark = "=0.2.0-succinct"
p3-maybe-rayon = "=0.2.0-succinct"
p3-bn254-fr = "=0.2.0-succinct"

# for local development
# sp1-core-executor = { path = "../sp1/crates/core/executor", features = [
#     "bigint-rug",
# ] }
# sp1-core-machine = { path = "../sp1/crates/core/machine" }
# sp1-prover = { path = "../sp1/crates/prover", features = ["native-gnark"] }
# sp1-recursion-core = { path = "../sp1/crates/recursion/core" }
# sp1-cuda = { path = "../sp1/crates/cuda" }
# sp1-stark = { path = "../sp1/crates/stark" }
# sp1-eval = { path = "../sp1/crates/eval" }

# p3-field = { path = "../Plonky3/field" }
# p3-air = { path = "../Plonky3/air" }
# p3-baby-bear = { path = "../Plonky3/baby-bear" }
# p3-bn254-fr = { path = "../Plonky3/bn254-fr" }
# p3-poseidon2 = { path = "../Plonky3/poseidon2" }
# p3-symmetric = { path = "../Plonky3/symmetric" }
# p3-dft = { path = "../Plonky3/dft" }
# p3-matrix = { path = "../Plonky3/matrix" }
# p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
# p3-commit = { path = "../Plonky3/commit" }
# p3-fri = { path = "../Plonky3/fri" }
# p3-challenger = { path = "../Plonky3/challenger" }
# p3-util = { path = "../Plonky3/util" }
# p3-interpolation = { path = "../Plonky3/interpolation" }
# p3-uni-stark =  { path = "../Plonky3/uni-stark" }
