[workspace]
members = ["air", "core", "eval", "perf", "prover", "server"]

exclude = ["sppark/poc/ntt-cuda", "sppark/rust"]

resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]

# sp1
# sp1-core-executor = { version = "4.2.0" } 
# sp1-core-machine = { version = "4.2.0" }
# sp1-prover = { version = "4.2.0" }
# sp1-recursion-core = { version = "4.2.0" }
# sp1-cuda = { version = "4.2.0" }
# sp1-stark = { version = "4.2.0" }
# sp1-eval = { version = "4.2.0" }

# p3
# p3-interpolation = "=0.2.2-succinct"
# p3-air = "=0.2.2-succinct"
# p3-field = "=0.2.2-succinct"
# p3-commit = "=0.2.2-succinct"
# p3-matrix = "=0.2.2-succinct"
# p3-baby-bear = "=0.2.2-succinct"
# p3-util = "=0.2.2-succinct"
# p3-challenger = "=0.2.2-succinct"
# p3-dft = "=0.2.2-succinct"
# p3-fri = "=0.2.2-succinct"
# p3-goldilocks = "=0.2.2-succinct"
# p3-keccak = "=0.2.2-succinct"
# p3-keccak-air = "=0.2.2-succinct"
# p3-blake3 = "=0.2.2-succinct"
# p3-mds = "=0.2.2-succinct"
# p3-merkle-tree = "=0.2.2-succinct"
# p3-poseidon2 = "=0.2.2-succinct"
# p3-symmetric = "=0.2.2-succinct"
# p3-uni-stark = "=0.2.2-succinct"
# p3-maybe-rayon = "=0.2.2-succinct"
# p3-bn254-fr = "=0.2.2-succinct"

# for local development
sp1-core-executor = { path = "../sp1-wip/crates/core/executor", features = [
    "bigint-rug",
] }
sp1-core-machine = { path = "../sp1-wip/crates/core/machine" }
sp1-prover = { path = "../sp1-wip/crates/prover", features = ["native-gnark"] }
sp1-recursion-core = { path = "../sp1-wip/crates/recursion/core" }
sp1-cuda = { path = "../sp1-wip/crates/cuda" }
sp1-stark = { path = "../sp1-wip/crates/stark" }
sp1-eval = { path = "../sp1-wip/crates/eval" }

p3-field = { path = "../plonky3-private/field" }
p3-air = { path = "../plonky3-private/air" }
p3-baby-bear = { path = "../plonky3-private/baby-bear" }
p3-bn254-fr = { path = "../plonky3-private/bn254-fr" }
p3-poseidon2 = { path = "../plonky3-private/poseidon2" }
p3-symmetric = { path = "../plonky3-private/symmetric" }
p3-dft = { path = "../plonky3-private/dft" }
p3-matrix = { path = "../plonky3-private/matrix" }
p3-merkle-tree = { path = "../plonky3-private/merkle-tree" }
p3-commit = { path = "../plonky3-private/commit" }
p3-fri = { path = "../plonky3-private/fri" }
p3-challenger = { path = "../plonky3-private/challenger" }
p3-util = { path = "../plonky3-private/util" }
p3-interpolation = { path = "../plonky3-private/interpolation" }
p3-uni-stark =  { path = "../plonky3-private/uni-stark" }
