[package]
name = "moongate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-dft = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
rand = "0.8.5"
p3-merkle-tree = { workspace = true }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
itertools = "0.13.0"
sp1-core = { workspace = true }
p3-air = { workspace = true }

[build-dependencies]
cc = "1.0"
which = "6.0"

[dev-dependencies]
rand = "0.8.5"
p3-fri = { workspace = true }
sp1-core = { workspace = true, features = ["programs"] }
