[package]
name = "moongate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-dft = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
rand = "0.8.5"
p3-merkle-tree = { workspace = true }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
itertools = "0.13.0"
sp1-core = { workspace = true, features = ["programs"] }
p3-air = { workspace = true }
air = { path = "../air" }
p3-challenger = { workspace = true }
p3-fri = { workspace = true }
p3-util = { workspace = true }
p3-interpolation = { workspace = true }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
rayon = "1.10.0"

[build-dependencies]
cc = "1.0"
which = "6.0"
air = { path = "../air" }

[dev-dependencies]
rand = "0.8.5"
p3-fri = { workspace = true }
sp1-core = { workspace = true, features = ["programs"] }
