[package]
name = "moongate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-field = { workspace = true }
p3-dft = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
rand = "0.8.5"
p3-merkle-tree = { workspace = true }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
itertools = "0.13.0"
sp1-core-executor = { workspace = true, features = ["programs"] }
sp1-core-machine = { workspace = true, features = ["sys"] }
sp1-stark = { workspace = true }
sp1-recursion-core = { workspace = true, features = ["sys", "program_validation"] }
p3-air = { workspace = true }
air = { path = "../air" }
p3-challenger = { workspace = true }
p3-fri = { workspace = true }
p3-util = { workspace = true }
p3-interpolation = { workspace = true }
zkhash = "0.2.0"
bincode = "1.3.3"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
rayon = "1.10.0"
hashbrown = { version = "0.14.5", features = ["serde"] }
oneshot = "0.1.8"

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"

[build-dependencies]
cc = "1.1"
which = "6.0"
cbindgen = "0.27.0"
pathdiff = "0.2.1"
ignore = "0.4.23"

[dev-dependencies]
rand = "0.8.5"
p3-fri = { workspace = true }
p3-uni-stark = { workspace = true }
sp1-core-executor = { workspace = true, features = ["programs"] }
serial_test = "3.1.1"
