[package]
name = "moongate-gas"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-prover = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-stark = { workspace = true }

moongate-prover = { path = "../prover" }
moongate-core = { path = "../core" }

tracing = "0.1.40"
csv = "1.3.0"
clap = { version = "4.5.7", features = ["derive", "env"] }

# tracing
opentelemetry = "^0.23.0"
opentelemetry_sdk = { version = "^0.23.0", features = [
    "trace",
    "rt-tokio",
    "logs_level_enabled",
] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "^0.16.0", features = ["default", "logs"] }
tracing-opentelemetry = "^0.24"
opentelemetry-appender-tracing = "0.4.0"
tracing-subscriber = "0.3.18"
tokio = { version = "^1.38.0", features = ["full"] }
bincode = "1.3.3"
prettytable = "0.10.0"
aws-sdk-s3 = "1.77.0"
tempfile = "3.17.1"
eyre = "0.6.12"
aws-config = "1.5.17"
tokio-util = { version = "0.7.13", features = ["io-util"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
regex = "1.11.1"
stream-cancel = "0.8.2"
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
enum-map = { version = "2.7.3", features = ["serde"] }
yoke = "0.7.5"
serde_json = "1.0.139"
itertools = "0.14.0"
csv-async = { version = "1.3.0", features = ["tokio", "tokio-stream"] }
serde_with = "3.12.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
