[package]
name = "moongate-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-prover = { workspace = true }
sp1-core-executor = { workspace = true, features = ["programs"] }
sp1-core-machine = { workspace = true }
sp1-stark = { workspace = true }
tracing = "0.1.40"

moongate-core = { path = "../core" }
sysinfo = "0.31.2"


[dev-dependencies]
sp1-prover = { workspace = true, features = ["export-tests"] }
sp1-core-executor = { workspace = true, features = ["programs"] }
