[package]
name = "moongate-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-prover = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-stark = { workspace = true }
tracing = "0.1.40"

moongate-core = { path = "../core" }
sysinfo = "0.31.2"
bincode = "1.3.3"

clap = { version = "4.5.9", features = ["derive", "env"] }


[dev-dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
serial_test = "3.1.1"

[features]
default = []
debug = ["sp1-core-machine/debug"]

[[bin]]
name = "build_compress_vks"
path = "bin/build_compress_vks.rs"
