[package]
name = "moongate-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-prover = { workspace = true }
sp1-core = { workspace = true, features = ["programs"] }
sp1-server = { workspace = true }
moongate-core = { path = "../core" }
moongate-prover = { path = "../prover" }
tokio = { version = "^1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twirp = { git = "https://github.com/github/twirp-rs.git" }
async-trait = "0.1.81"
bincode = "1.3.3"

[dev-dependencies]
sp1-prover = { workspace = true, features = ["export-tests"] }
sp1-core = { workspace = true, features = ["programs"] }
